prevent style overrides on header, fix alignment

--- a/src/less/widgets/slideouts.less
+++ b/src/less/widgets/slideouts.less
@@ -77,6 +77,20 @@
   }
 
   /* Variant Styles */
+  &.pf-widget-variant-1 {
+    width: 350px;
+
+    .pf-widget-content {
+      .pf-widget-headline {
+        text-align: left;
+      }
+
+      .pf-widget-message {
+        text-align: left;
+      }
+    }
+  }
+
   &.pf-widget-variant-2 {
     width: 350px;
 
